--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  text-align: center;
 }
 #main_container {
     margin-bottom: 50px;
